crates/omnifs-itest/tests/kubernetes/snapshots/cluster-browse__00-list-root.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 0: list /
README.md  file  unknown  stable
cluster  dir  -  -
namespaces  dir  -  -
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
