crates/omnifs-itest/tests/kubernetes/snapshots/cluster-browse__05-list-deployments.snap
---
source: crates/omnifs-itest/src/scenario.rs
expression: trace.clone()
---
## step 5: list /namespaces/demo/deployments
ticker  dir  -  -
canonical:
  (none)
fs:
  (none)
invalidations:
  (none)
